test/functions/resolution/errors/fail-many-candidates.default.good
fail-many-candidates.chpl:16: error: unresolved call 'foo(1, "hello")'
fail-many-candidates.chpl:13: note: this candidate did not match: foo(a, b)
fail-many-candidates.chpl:13: note: because where clause evaluated to false
fail-many-candidates.chpl:16: note: other candidates are:
fail-many-candidates.chpl:1: note:   foo(a: int, b: int)
fail-many-candidates.chpl:4: note:   foo(a: string, b: int)
note: and 2 other candidates, use --print-all-candidates to see them
